--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "Official Fantasy RMT API Client for Node JS",
   "main": "index.js",
-  "scripts": {
-    "test": "mocha"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/ItsPikzy/fantasy-nodejs-client.git"
@@ -26,9 +24,5 @@
   "dependencies": {
     "axios": "^0.26.0",
     "lodash": "^4.17.21"
-  },
-  "devDependencies": {
-    "chai": "^4.3.6",
-    "mocha": "^9.2.0"
   }
 }
